# projekt-wyscigi

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  bootLog.txt
.github/workflows/: ci.yml
resources/: credits.txt  instrukcja.txt
resources/textures/: Speedway.tmx
src/: bodyFunction.cpp  bodyFunction.h  bot.h  buttons.cpp  buttons.h  car.cpp  car.h  carSelection.cpp  carSelection.h  cars.cpp  cars.h  gameObjects.h  level.cpp  level.h  level1.cpp  level1.h  level2.cpp  level2.h  level3.cpp  level3.h  levelSelection.cpp  levelSelection.h  main.cpp  mainMenu.cpp  mainMenu.h  player.cpp  player.h  program.cpp  program.h  raport.cpp  raport.h  settings.cpp  settings.h  settingsData.h  util.cpp  util.h
src/buttons/: RectangleButton.cpp  RectangleButton.h  button.cpp  button.h  circleButton.cpp  circleButton.h  howeredSpriteButton.cpp  howeredSpriteButton.h  progressbar.cpp  progressbar.h  slider.cpp  slider.h  spriteButton.cpp  spriteButton.h  textBox.cpp  textBox.h  textButton.cpp  textButton.h
src/game/: bodyFunction.cpp  bodyFunction.h  bot.cpp  bot.h  buttons.cpp  buttons.h  car.cpp  car.h  carSelection.cpp  carSelection.h  cars.cpp  cars.h  level.cpp  level.h  level1.cpp  level1.h  level2.cpp  level2.h  level3.cpp  level3.h  levelSelection.cpp  levelSelection.h  mainMenu.cpp  mainMenu.h  player.cpp  player.h  settings.cpp  settings.h  settingsData.cpp  util.cpp
src/game/buttons/: RectangleButton.cpp  RectangleButton.h  howeredSpriteButton.h  spriteButton.cpp  textButton.cpp  textButton.h
src/game/gameObjects/: border.cpp  border.h  checkpoint.cpp  lapCounter.h  lapTimer.cpp  rectangle.h  score.h
src/gameObjects/: border.h  checkpoint.cpp  checkpoint.h  circle.h  collidable.h  hitbox.cpp  hitbox.h  lapCounter.cpp  lapCounter.h  lapTimer.cpp  lapTimer.h  rectangle.h  score.cpp  score.h  trap.h
src/perf/: memTracker.cpp  memTracker.h  raport.cpp  raport.h  speedTest.cpp
src/utils/: musicPlayer.cpp  musicPlayer.h  util.h
